# aoc2020

./: .gitignore  run_all_tests.sh
0-one/: pyproject.toml
0-one/one/: __main__.py  solution.py
1-two/: Cargo.toml  rust-toolchain
1-two/src/: main.rs
2-three/: package.yaml  three.cabal
2-three/src/: Lib.hs
3-four/: package-lock.json  package.json  tsconfig.json
3-four/src/: index.ts
4-five/: .gitignore  five  mix.exs  run.sh
4-five/lib/: cli.ex
5-six/: README.md  shard.yml
5-six/spec/: six_spec.cr  spec_helper.cr
5-six/src/: six.cr
6-seven/src/: main  main.nim
7-eight/src/com/ducharmemp/eight/: DuplicateInstructionWatcher.java  Eight.java  Instruction.java  ProgramSimulator.java  ProgramStep.java
one/one/: solution.py
one/tests/: test_one.py
