[package]
name = "two"
version = "0.1.0"
authors = ["ducharmemp <ducharmemp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
anyhow = "1.0.34"

[dev-dependencies]
demonstrate = "0.4.5"
tempfile = "3.1.0"